[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/toggle_splat.png" type="Texture" id=1]
[ext_resource path="res://Assets/toggle_sq.png" type="Texture" id=2]
[ext_resource path="res://Assets/PanoramaSky/A_pano_FULL.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Level4.gd" type="Script" id=4]
[ext_resource path="res://Scenes/PowerUp.gd" type="Script" id=5]
[ext_resource path="res://Scenes/PoemCamRig.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Character4.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/TurnMarker.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/GiantIceCream.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/MapDQ2.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/ClusterTomato.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Fonts/ARCADE_I.TTF" type="DynamicFontData" id=12]
[ext_resource path="res://Assets/Fonts/TCM_____.TTF" type="DynamicFontData" id=13]
[ext_resource path="res://Themes/ProgressBar.tres" type="Theme" id=14]

[sub_resource type="DynamicFont" id=16]
size = 60
outline_size = 3
use_filter = true
extra_spacing_top = 16
extra_spacing_bottom = 16
extra_spacing_space = -18
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.490196, 0.584314, 0.788235, 0.270588 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.670588, 0.0588235, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=10]
Panel/styles/panel = SubResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_right = 0.0
bg_color = Color( 0.458824, 0.458824, 0.458824, 1 )
border_width_left = 2
border_width_top = 2
border_color = Color( 0.819608, 0.819608, 0.819608, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.556863, 0.815686, 0.878431, 1 )
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0509804, 0.392157, 0.482353, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0784314, 0.270588, 0.321569, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.192157, 0.133333, 0.266667, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.262745, 0.0980392, 0.466667, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="Image" id=23]
data = {
"data": PoolByteArray( 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42 ),
"format": "RGB8",
"height": 8,
"mipmaps": false,
"width": 8
}

[sub_resource type="ImageTexture" id=12]
flags = 4
flags = 4
image = SubResource( 23 )
size = Vector2( 8, 8 )

[sub_resource type="StyleBoxTexture" id=13]
texture = SubResource( 12 )
region_rect = Rect2( 0, 0, 8, 8 )

[sub_resource type="Theme" id=22]
resource_local_to_scene = true
default_font = SubResource( 8 )
Button/colors/font_color = Color( 0.788235, 0.694118, 0.0666667, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 1, 0.878431, 0.054902, 1 )
Button/colors/font_color_hover = Color( 1, 0.878431, 0.054902, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 0
Button/fonts/font = SubResource( 8 )
Button/styles/disabled = SubResource( 4 )
Button/styles/focus = SubResource( 7 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 7 )
CheckBox/icons/checked = ExtResource( 1 )
CheckBox/icons/unchecked = ExtResource( 2 )
CheckButton/icons/off = ExtResource( 2 )
CheckButton/icons/on = ExtResource( 1 )
Panel/styles/panel = SubResource( 13 )

[sub_resource type="DynamicFont" id=15]
size = 17
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=17]
size = 20
font_data = ExtResource( 13 )

[sub_resource type="CanvasItemMaterial" id=18]

[sub_resource type="Gradient" id=19]
colors = PoolColorArray( 0.507813, 0.507813, 0.507813, 1, 0, 0, 0, 0.313726 )

[sub_resource type="GradientTexture2D" id=20]
gradient = SubResource( 19 )
width = 1024
height = 600
fill = 1
fill_from = Vector2( 0.5, 0.6 )

[sub_resource type="PanoramaSky" id=2]
panorama = ExtResource( 3 )

[sub_resource type="Environment" id=1]
background_mode = 2
background_sky = SubResource( 2 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.7
ambient_light_sky_contribution = 0.0
glow_enabled = true
adjustment_saturation = 2.13

[node name="Level_2" type="Spatial"]
script = ExtResource( 4 )
board_size = Vector2( 10, 10 )
mouse_sensitivity = 0.2

[node name="CameraRig" type="Position3D" parent="."]
transform = Transform( 0.819152, 0.0499905, -0.571394, 0, 0.996195, 0.0871558, 0.573577, -0.0713938, 0.816035, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraRig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )
current = true
size = 10.0

[node name="TurnMarker" parent="." instance=ExtResource( 8 )]

[node name="PoemLabelContainer" type="Spatial" parent="."]
visible = false

[node name="Label3D" type="Label3D" parent="PoemLabelContainer"]
transform = Transform( 1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, 0, 30, -80 )
pixel_size = 0.1
offset = Vector2( -750, 0 )
modulate = Color( 0.0823529, 0.0627451, 0.109804, 1 )
outline_modulate = Color( 0.0509804, 0.392157, 0.482353, 1 )
text = "Dealer deals eleven cards each.
Ghosts (dealer and dealer’s opposite)
hold their cards face out,
can gain no knowledge, and do not play."
font = SubResource( 16 )
horizontal_alignment = 0
autowrap = true
width = 2400.0

[node name="Label3D2" type="Label3D" parent="PoemLabelContainer"]
transform = Transform( -1, -1.51808e-08, -8.60947e-08, 0, 0.984808, -0.173648, 8.74228e-08, -0.173648, -0.984808, 0, 30, 80 )
pixel_size = 0.1
offset = Vector2( -750, 0 )
modulate = Color( 0.0823529, 0.0627451, 0.109804, 1 )
outline_modulate = Color( 0.262745, 0.0980392, 0.466667, 1 )
text = "Dealer deals eleven cards each.
Ghosts (dealer and dealer’s opposite)
hold their cards face out,
can gain no knowledge, and do not play."
font = SubResource( 16 )
horizontal_alignment = 0
autowrap = true
width = 2400.0

[node name="Label3D3" type="Label3D" parent="PoemLabelContainer"]
transform = Transform( -4.37114e-08, 0.173648, 0.984808, 0, 0.984808, -0.173648, -1, -7.59041e-09, -4.30473e-08, -80, 30, 0 )
pixel_size = 0.1
offset = Vector2( -750, 0 )
modulate = Color( 0.0823529, 0.0627451, 0.109804, 1 )
outline_modulate = Color( 0.443137, 0.615686, 1, 1 )
text = "Dealer deals eleven cards each.
Ghosts (dealer and dealer’s opposite)
hold their cards face out,
can gain no knowledge, and do not play."
font = SubResource( 16 )
horizontal_alignment = 0
autowrap = true
width = 2400.0

[node name="Label3D4" type="Label3D" parent="PoemLabelContainer"]
transform = Transform( -4.37114e-08, -0.173648, -0.984808, 0, 0.984808, -0.173648, 1, -7.59041e-09, -4.30473e-08, 80, 30, 0 )
pixel_size = 0.1
offset = Vector2( -750, 0 )
modulate = Color( 0.0823529, 0.0627451, 0.109804, 1 )
outline_modulate = Color( 0.788235, 0.694118, 0.0666667, 1 )
text = "Dealer deals eleven cards each.
Ghosts (dealer and dealer’s opposite)
hold their cards face out,
can gain no knowledge, and do not play."
font = SubResource( 16 )
horizontal_alignment = 0
autowrap = true
width = 2400.0

[node name="You" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 19 )
visible = true
player = true

[node name="PoemCamRig" type="Position3D" parent="You"]
script = ExtResource( 6 )

[node name="PoemCam" type="Camera" parent="You/PoemCamRig"]
transform = Transform( 1, 0, 0, 0, 0.939693, -0.34202, 0, 0.34202, 0.939693, 2, 0.5, 3 )
far = 200.0

[node name="Aloysius" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 8 )

[node name="Ignatius" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 4 )

[node name="Ignatius2" parent="." groups=["stationary"] instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 3 )

[node name="Ignatius3" parent="." groups=["stationary"] instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0 )

[node name="Ignatius4" parent="." groups=["stationary"] instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 2, -5 )

[node name="Ignatius5" parent="." groups=["stationary"] instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 2, -11 )

[node name="Panel" type="Panel" parent="."]
margin_right = 245.0
margin_bottom = 229.0
theme = SubResource( 10 )

[node name="GUI" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 228.0
mouse_filter = 2
theme = SubResource( 22 )
alignment = 1

[node name="Right" type="VBoxContainer" parent="GUI"]
margin_right = 240.0
margin_bottom = 228.0
rect_min_size = Vector2( 240, 0 )
mouse_filter = 2

[node name="PlayerOptions" type="VBoxContainer" parent="GUI/Right"]
margin_left = 18.0
margin_right = 221.0
margin_bottom = 214.0
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/PlayerOptions"]
margin_right = 203.0
margin_bottom = 23.0
text = "It is Derp's turn"
align = 1

[node name="Read" type="Button" parent="GUI/Right/PlayerOptions"]
margin_left = 64.0
margin_top = 27.0
margin_right = 139.0
margin_bottom = 54.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 4
disabled = true
text = "Read"

[node name="Walk" type="Button" parent="GUI/Right/PlayerOptions"]
margin_left = 64.0
margin_top = 58.0
margin_right = 139.0
margin_bottom = 85.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 4
text = "Move"

[node name="PickUp" type="Button" parent="GUI/Right/PlayerOptions"]
margin_left = 64.0
margin_top = 89.0
margin_right = 139.0
margin_bottom = 116.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 4
disabled = true
text = "Pick Up"

[node name="Throw" type="Button" parent="GUI/Right/PlayerOptions"]
margin_left = 64.0
margin_top = 120.0
margin_right = 139.0
margin_bottom = 147.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 4
text = "Throw"

[node name="Wait" type="Button" parent="GUI/Right/PlayerOptions"]
margin_left = 64.0
margin_top = 151.0
margin_right = 139.0
margin_bottom = 178.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 4
text = "Wait"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Right/PlayerOptions"]
margin_top = 182.0
margin_right = 203.0
margin_bottom = 214.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/PlayerOptions/HBoxContainer"]
visible = false
margin_top = 8.0
margin_right = 149.0
margin_bottom = 27.0
size_flags_horizontal = 7
custom_fonts/font = SubResource( 15 )
text = "Pause during all turns "

[node name="CheckButton" type="CheckButton" parent="GUI/Right/PlayerOptions/HBoxContainer"]
margin_right = 203.0
margin_bottom = 32.0
size_flags_horizontal = 7
text = "Pause during all turns"

[node name="ReadOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
margin_top = 222.0
margin_right = 239.0
margin_bottom = 249.0

[node name="Screenshot" type="Button" parent="GUI/Right/ReadOptions"]
margin_right = 239.0
margin_bottom = 27.0
text = "Take Screenshot"

[node name="WalkOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
margin_right = 229.0
margin_bottom = 49.0
rect_min_size = Vector2( 229, 0 )
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/WalkOptions"]
margin_left = 17.0
margin_right = 212.0
margin_bottom = 49.0
size_flags_horizontal = 4
text = "Choose your destination,
or click \"Cancel\""
align = 1

[node name="PickUpOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
margin_right = 200.0

[node name="ThrowOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
margin_right = 229.0
margin_bottom = 49.0
rect_min_size = Vector2( 229, 0 )
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="GUI/Right/ThrowOptions"]
margin_left = 42.0
margin_right = 186.0
margin_bottom = 49.0
size_flags_horizontal = 4
text = "Click your target, 
or \"Cancel\""
align = 1

[node name="WaitOptions" type="VBoxContainer" parent="GUI/Right"]
visible = false
margin_top = 142.0
margin_right = 298.0
margin_bottom = 184.0

[node name="Label" type="Label" parent="GUI/Right/WaitOptions"]
margin_right = 298.0
margin_bottom = 14.0
text = "Wait how long?"

[node name="WaitDuration" type="SpinBox" parent="GUI/Right/WaitOptions"]
margin_top = 18.0
margin_right = 298.0
margin_bottom = 42.0
min_value = 10.0
max_value = 300.0
step = 10.0
value = 100.0

[node name="ProceedCancel" type="HBoxContainer" parent="GUI/Right"]
visible = false
margin_top = 226.0
margin_right = 229.0
margin_bottom = 253.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Proceed" type="Button" parent="GUI/Right/ProceedCancel"]
margin_left = 37.0
margin_right = 112.0
margin_bottom = 27.0
rect_min_size = Vector2( 75, 0 )
text = "Proceed"

[node name="Cancel" type="Button" parent="GUI/Right/ProceedCancel"]
margin_left = 116.0
margin_right = 191.0
margin_bottom = 27.0
rect_min_size = Vector2( 75, 0 )
text = "Cancel"

[node name="Center" type="VBoxContainer" parent="GUI"]
margin_left = 244.0
margin_right = 1024.0
margin_bottom = 228.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Center"]
margin_right = 780.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 2
alignment = 2

[node name="Label" type="Label" parent="GUI/Center/HBoxContainer"]
margin_left = 396.0
margin_top = 6.0
margin_right = 476.0
margin_bottom = 29.0
rect_min_size = Vector2( 80, 0 )
custom_colors/font_color = Color( 0.490196, 0.584314, 0.788235, 1 )
text = "Mess"
align = 1
valign = 1
uppercase = true

[node name="MessProgressBar" type="ProgressBar" parent="GUI/Center/HBoxContainer"]
margin_left = 480.0
margin_right = 780.0
margin_bottom = 35.0
rect_min_size = Vector2( 300, 30 )
mouse_filter = 2
theme = ExtResource( 14 )
rounded = true

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/Center"]
margin_top = 39.0
margin_right = 780.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 2
alignment = 2

[node name="Label" type="Label" parent="GUI/Center/HBoxContainer2"]
margin_left = 396.0
margin_top = 2.0
margin_right = 476.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 30 )
custom_colors/font_color = Color( 0.490196, 0.584314, 0.788235, 1 )
text = "Hilarity"
align = 1
valign = 1
uppercase = true

[node name="HilarityProgressBar" type="ProgressBar" parent="GUI/Center/HBoxContainer2"]
margin_left = 480.0
margin_right = 780.0
margin_bottom = 35.0
rect_min_size = Vector2( 300, 30 )
mouse_filter = 2
theme = ExtResource( 14 )

[node name="Control" type="Control" parent="GUI/Center"]
visible = false
margin_top = 78.0
margin_right = 780.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer3" type="HBoxContainer" parent="GUI/Center"]
margin_top = 78.0
margin_right = 780.0
margin_bottom = 113.0
mouse_filter = 2
alignment = 2

[node name="Label" type="Label" parent="GUI/Center/HBoxContainer3"]
margin_left = 308.0
margin_top = 6.0
margin_right = 476.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0.490196, 0.584314, 0.788235, 1 )
custom_fonts/font = SubResource( 17 )
text = "Level Up Progress"
align = 1
valign = 1
uppercase = true

[node name="LevelUpProgressBar" type="ProgressBar" parent="GUI/Center/HBoxContainer3"]
margin_left = 480.0
margin_right = 780.0
margin_bottom = 35.0
rect_min_size = Vector2( 300, 30 )
mouse_filter = 2
theme = ExtResource( 14 )
allow_greater = true

[node name="LevelUpOptions" type="TextureRect" parent="."]
visible = false
material = SubResource( 18 )
mouse_filter = 0
texture = SubResource( 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="LevelUpOptions"]
margin_left = 200.0
margin_top = 235.0
margin_right = 824.0
margin_bottom = 400.0
theme = SubResource( 22 )
alignment = 1

[node name="Label" type="Label" parent="LevelUpOptions/VBoxContainer"]
margin_top = 40.0
margin_right = 624.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 40 )
text = "Choose your power-up!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LevelUpOptions/VBoxContainer"]
margin_top = 84.0
margin_right = 624.0
margin_bottom = 124.0
custom_constants/separation = 12
alignment = 1

[node name="PowerUp1" type="Button" parent="LevelUpOptions/VBoxContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 210.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
text = "Move Speed +"
expand_icon = true
script = ExtResource( 5 )

[node name="PowerUp2" type="Button" parent="LevelUpOptions/VBoxContainer/HBoxContainer"]
margin_left = 222.0
margin_right = 402.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
expand_icon = true
script = ExtResource( 5 )

[node name="PowerUp3" type="Button" parent="LevelUpOptions/VBoxContainer/HBoxContainer"]
margin_left = 414.0
margin_right = 594.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
expand_icon = true
script = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.824707, 0.300371, 0.479204, -0.534501, 0.690879, 0.486821, -0.184845, -0.657619, 0.730321, 8.30672, 3.51017, 9.72209 )
visible = false
shadow_enabled = true

[node name="GiantIceCream" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0.5, -15 )
visible = false
nextscene = "res://Scenes/Level_3.tscn"

[node name="MapDQ2" parent="." instance=ExtResource( 10 )]

[node name="ClusterTomato2" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 3 )

[node name="ClusterTomato4" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0 )

[node name="ClusterTomato5" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 2, -5 )

[node name="ClusterTomato6" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 2, -11 )

[node name="ClusterTomato3" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 8 )

[connection signal="tree_exiting" from="." to="." method="_on_Level4_tree_exiting"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/Read" to="." method="_on_Read_pressed"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/Walk" to="." method="_on_Walk_pressed"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/PickUp" to="." method="_on_PickUp_pressed"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/Throw" to="." method="_on_Throw_pressed"]
[connection signal="pressed" from="GUI/Right/PlayerOptions/Wait" to="." method="_on_Wait_pressed"]
[connection signal="toggled" from="GUI/Right/PlayerOptions/HBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="GUI/Right/ReadOptions/Screenshot" to="." method="_on_Screenshot_pressed"]
[connection signal="pressed" from="GUI/Right/ProceedCancel/Proceed" to="." method="_on_Proceed_pressed"]
[connection signal="pressed" from="GUI/Right/ProceedCancel/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="LevelUpOptions/VBoxContainer/HBoxContainer/PowerUp1" to="LevelUpOptions/VBoxContainer/HBoxContainer/PowerUp1" method="_on_PowerUp_pressed"]
[connection signal="pressed" from="LevelUpOptions/VBoxContainer/HBoxContainer/PowerUp2" to="LevelUpOptions/VBoxContainer/HBoxContainer/PowerUp2" method="_on_PowerUp_pressed"]
[connection signal="pressed" from="LevelUpOptions/VBoxContainer/HBoxContainer/PowerUp3" to="LevelUpOptions/VBoxContainer/HBoxContainer/PowerUp3" method="_on_PowerUp_pressed"]
